--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <img src  = "images/chameleon.png" width="400" height="300"/>
                 </a>
                 <p>A chameleon, from the family of reptiles, <br>would be a nice choice to create during this rainy season <br>
-                    Funfact: Unlike other reptiles, chameleons cannot<br> regrow there tails.<br> Creating a paper chameleon would be intresting, 
+                    Funfact: Unlike other reptiles, chameleons cannot<br> regrow their tails.<br> Creating a paper chameleon would be intresting, 
                     click on<br> the image to know the instructions.
                 </p>
                 </justify>
